--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,12 +27,14 @@ jobs:
       - uses: actions/checkout@v2
 
       - name: Setup V environment
-        # You may pin to the exact commit or the version.
-        # uses: nocturlab/setup-vlang-action@5cb58a1a4ae31497272bea0547d2df257e208641
-        uses: nocturlab/setup-vlang-action@v1.2.0
-        # with:
-          # The V version to download and use.
-          # v-version: # optional, default is latest
+        run: |
+          git clone https://github.com/vlang/v
+          cd v
+          make
+          ./v symlink
+
+      - name: Build app
+        run: v . -shared
 
       # Runs a set of commands using the runners shell
       - name: Run tests
