--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -1,41 +1,25 @@
-# This is a basic workflow to help you get started with Actions
-
 name: Tests
 
-# Controls when the action will run. 
 on:
-  # Triggers the workflow on push or pull request events but only for the main branch
   push:
     branches:
       - '*'
-  pull_request:
-    branches: [ main ]
 
-  # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
 
-# A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
     runs-on: ubuntu-latest
 
-    # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
-      # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - uses: actions/checkout@v2
 
-      - name: Setup V environment
-        run: |
-          git clone https://github.com/vlang/v
-          cd v
-          make
-          ./v symlink
-
-      - name: Build app
+      - name: Set up V version latest
+        uses: nocturlab/setup-vlang-action@master
+        with:
+          v-version: latest
+        id: v
+      - name: Build repository app
         run: v . -shared
-
-      # Runs a set of commands using the runners shell
-      - name: Run tests
+      - name: Run V tests
         run: v test .
