--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -2,10 +2,8 @@ name: Tests
 
 on:
   push:
-    branches:
-      - '*'
-
-  workflow_dispatch:
+  # pull_request:
+  # workflow_dispatch:
 
 jobs:
   build:
